# cefet-61499-node

./: CMakeLists.txt  partitions.csv
components/cefet_node_engine/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/cefet_node_engine/include/blocks/io/: analog_input_block.h  encoder_input_block.h  mcpwm_motor_block.h  pwm_output_block.h  serial_monitor_block.h
components/cefet_node_engine/include/blocks/math/: math_node_block.h  sandbox_block.h  state_space_block.h
components/cefet_node_engine/include/blocks/network/: modbus_tcp_client_block.h  modbus_tcp_server_block.h  mqtt_publisher_block.h  mqtt_subscriber_block.h  udp_publisher_block.h  udp_subscriber_block.h
components/cefet_node_engine/include/blocks/timers/: e_cycle_block.h
components/cefet_node_engine/include/core/: cefet_events.h  cefet_node_engine.h  i_function_block.h
components/cefet_node_engine/include/core/management/: block_registry.h  connection_manager.h  json_parser.h  spiffs_manager.h
components/cefet_node_engine/include/core/network/: network_manager.h
components/cefet_node_engine/src/blocks/io/: analog_input_block.cpp  encoder_input_block.cpp  mcpwm_motor_block.cpp  pwm_output_block.cpp  serial_monitor_block.cpp
components/cefet_node_engine/src/blocks/math/: math_node_block.cpp  sandbox_block.cpp  state_space_block.cpp
components/cefet_node_engine/src/blocks/network/: modbus_tcp_client_block.cpp  modbus_tcp_server_block.cpp  mqtt_publisher_block.cpp  mqtt_subscriber_block.cpp  udp_publisher_block.cpp  udp_subscriber_block.cpp
components/cefet_node_engine/src/blocks/timers/: e_cycle_block.cpp
components/cefet_node_engine/src/core/: cefet_node_engine.cpp
components/cefet_node_engine/src/core/management/: block_registry.cpp  connection_manager.cpp  json_parser.cpp  spiffs_manager.cpp
components/cefet_node_engine/src/core/network/: network_manager.cpp
components/cefet_node_engine/test/listener/: modbus_master.py  udp_listener.py
components/lua/: CMakeLists.txt
data/: config.json  script.lua
main/: main.cpp
